name:                reflex-dom-storage
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Reflex.Dom.Storage.Class
                     , Reflex.Dom.Storage.Base
  build-depends:       base >=4.9 && <4.11
                     , containers >=0.5 && <0.6
                     , bytestring >=0.10 && <0.11
                     , aeson
                     , mtl
                     , reflex
                     , reflex-dom-core
                     , ghcjs-dom
                     , jsaddle
                     , text
                     , dependent-map
                     , dependent-sum
                     , ref-tf
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
