name:                reflex-dom-storage
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Reflex.Dom.Storage.Class
                     , Reflex.Dom.Storage.Base
                     , Data.GADT.Aeson
  build-depends:       base >=4.9 && <4.13
                     , aeson >= 1.2 && < 1.5
                     , bytestring >=0.10 && <0.11
                     , containers >=0.5 && <0.7
                     , constraints == 0.10.*
                     , dependent-map >= 0.2 && < 0.3
                     , dependent-sum >= 0.4 && < 0.5
                     , exception-transformers >= 0.4.0 && < 0.5
                     , ghcjs-dom >= 0.9 && < 0.10
                     , jsaddle >= 0.9 && < 0.10
                     , mmorph >= 1.0 && < 1.2
                     , mtl >= 2.2 && < 2.3
                     , reflex >= 0.5 && < 0.6
                     , reflex-dom-core >= 0.4 && < 0.5
                     , ref-tf >= 0.4 && < 0.5
                     , text >= 1.2 && < 1.3
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  default-language:    Haskell2010
