name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , common
               , reflex-dom
               , static
               , text
               , mtl
               , ghcjs-dom
               , aeson
               , dependent-sum
               , dependent-map
  exposed-modules:
    Frontend
  other-modules:
      Reflex.Dom.Storage.Base
    , Reflex.Dom.Storage.Class
    , Storage.Example
  ghc-options: -Wall

executable frontend
  main-is: main.hs
  hs-source-dirs: src
  build-depends: base
               , common
               , reflex-dom
               , static
               , text
               , frontend
  --TODO: Make these ghc-options optional
  ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
